fixed top spacing on desktop

--- a/src/App.scss
+++ b/src/App.scss
@@ -151,7 +151,7 @@ $black: black;
   .RecipeSearchField {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 2vw;
+    padding-top: 3vw;
     width: 90vw;
   }
 
